--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">MNTR</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="mntr_label">MNTR</string>
+    <string name="available_networks_label">Available Networks</string>
+    <string name="available_networks">Available Networks</string>
+    <string name="return1">Return</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="please_choose_your_wish">Please choose your wish: </string>
+    <string name="current_available_networks">Here are the current available networks:</string>
 </resources>
