complete the task to monitor current network connected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="return1">Return</string>
 
     <string name="choose_option">Please Choose an Option:</string>
+    <string name="connection_state" />
 </resources>
