--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="available_networks">Available Networks</string>
     <string name="return1">Return</string>
 
-    <string name="choose_option">Please Choose an Option:</string>
+    <string name="welcome_to_mntr">Welcome To: MNTR</string>
     <string name="connection_state" />
 </resources>
